target="_blank" on index.html
added target="_blank" on all href links on index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 				<nav id="nav">
 					<ul>
-						<li><a  class="link" href="projects.html">Projects</a></li>
+						<li><a  class="link" href="projects.html" target="_blank">Projects</a></li>
 						<li><a  class="link link_samepage" href="#bio">Summary</a></li>
 						<!-- <li><a  class="link link_samepage" href="#">Bio</a></li> -->
 						<li><a class="link" href="resume.pdf" target="_blank">Resume</a></li>
@@ -69,7 +69,7 @@
 				<h2>Julian Reyes</h2>
 				<p>UC Davis - Computer Science; Neurobiology, Physiology and Behavior <br /> Web Developer, Software Developer</p>
 				<ul class="actions">
-					<li><a href="projects.html" class="button special big">Projects</a></li>
+					<li><a href="projects.html" class="button special big" target="_blank">Projects</a></li>
 				</ul>
 			</section>
 
@@ -316,8 +316,8 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="https://www.linkedin.com/in/julian-reyes-1b2727190/" class="button special big">LinkedIn</a></li>
-											<li><a href="resume.pdf" class="button big">Resume</a></li>
+											<li><a href="https://www.linkedin.com/in/julian-reyes-1b2727190/" class="button special big" target="_blank">LinkedIn</a></li>
+											<li><a href="resume.pdf" class="button big" target="_blank">Resume</a></li>
 										</ul>
 									</div>
 								</section>
@@ -335,7 +335,7 @@
 							<p>I hope we can collaborate soon on future projects</p>
 						</header>
 						<ul class="actions">
-							<li><a href="https://www.linkedin.com/in/julian-reyes-1b2727190/" class="button special big">Get in touch!</a></li>
+							<li><a href="https://www.linkedin.com/in/julian-reyes-1b2727190/" class="button special big" target="_blank">Get in touch!</a></li>
 						</ul>
 					</div>
 				</section>
