updated experience section on index.html
-added Helix, Coastal
-updated photos for all

--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@
 				</section>
 
 
-								<!-- Two Experience -->
+
+
+
+
+
+
+
+								<!-- Two Experience --------------------------------------->
 								<section>
 									<div style="width: 100%; margin-top: 40px;" class="">
 										<div style="text-align: center;" class="container">
@@ -113,16 +120,31 @@
 									</div>
 								</section>
 
+
+
 								<section class="exp">
 									<div style="padding-top: 30px; padding-bottom: 60px;" class="container">
 									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
 										<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
-												<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic02.jpg" alt="">
+												<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="helix.jpeg" alt="">
 										</div>
 										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
-											<h3 style="text-align: right;"> <strong> Full Stack Web Developer at Unearth Campaigns</strong></h3>
-											<p>Currently employed as a full stack web engineer for Unearth Campaigns based out of Downtown Sacramento, helping on mostly backend JavaScript and PHP and client side HTML, JavaScript, and CSS.</p>
-											<p style="text-align: right;"> <em>August 2019 - June 2020</em> </p>
+											<h3 style="text-align: right;"> <strong> Clinical Laboratory Technician at Helix</strong></h3>
+											<p>Currently employed as clinical lab technician for Helix biotech performing automated RNA extraction and PCR-based genetic testing.</p>
+											<p style="text-align: right;"> <em>August 2021 - Current</em> </p>
+										</div>
+									</div>
+								</div>
+								</section>
+
+								<section class="exp2">
+									<div style="padding-top: 30px; padding-bottom: 60px;" class="container">
+									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+
+										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
+											<h3 style="text-align: center;"> <strong> Clinical Laboratory Technician at Helix</strong></h3>
+											<p>Currently employed as clinical lab technician for Helix biotech performing automated RNA extraction and PCR-based genetic testing.</p>
+											<p style="text-align: right;"> <em>August 2021 - Current</em> </p>
 										</div>
 									</div>
 								</div>
@@ -130,6 +152,54 @@
 
 
 
+
+
+
+								<section class="exp">
+									<div style="padding-bottom: 60px;" class="container">
+									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
+											<h3><strong>Analytical Chemistry Laboratory Technician/Microbiology Analyst</strong></h3>
+											<p>  Setup, prepared, troubleshot, and ran Gas Chromatography Mass Spectroscopy, Liquid Chromatography Mass Spectroscopy, HPLC, Atomic Absorption Spectroscopy, and PCR analytical chemistry equipment and methods to analyze heavy metals, mycotoxins, microbes, pesticides, and solvents of agriculture-based consumer products in accordance with state regulations.</p>
+											<p> <em>February 2021 - August 2021</em> </p>
+										</div>
+										<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
+												<img class="test" style="margin: auto; width: 100%; height: auto;border-radius: 20px;" src="coastal.png" alt="">
+										</div>
+									</div>
+								</div>
+								</section>
+
+								<section class="exp2">
+									<div style="padding-bottom: 60px;" class="container">
+									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 100%;" class="">
+											<h3 style="text-align: center;"><strong>Analytical Chemistry Laboratory Technician/Microbiology Analyst</strong></h3>
+											<p>  Setup, prepared, troubleshot, and ran Gas Chromatography Mass Spectroscopy, Liquid Chromatography Mass Spectroscopy, HPLC, Atomic Absorption Spectroscopy, and PCR analytical chemistry equipment and methods to analyze heavy metals, mycotoxins, microbes, pesticides, and solvents of agriculture-based consumer products in accordance with state regulations.</p>
+											<p> <em>February 2021 - August 2021</em> </p>
+										</div>
+									</div>
+								</div>
+								</section>
+
+
+
+
+
+								<section class="exp">
+									<div style="padding-top: 30px; padding-bottom: 60px;" class="container">
+									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+										<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
+												<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="unearth.jpg" alt="">
+										</div>
+										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
+											<h3 style="text-align: right;"> <strong> Full Stack Web Developer at Unearth Campaigns</strong></h3>
+											<p>Full stack web engineer for Unearth Campaigns based out of Downtown Sacramento, helping on mostly backend JavaScript and PHP and client side HTML, JavaScript, and CSS.</p>
+											<p style="text-align: right;"> <em>August 2019 - June 2020</em> </p>
+										</div>
+									</div>
+								</div>
+								</section>
 
 								<section class="exp2">
 									<div style="padding-top: 30px; padding-bottom: 60px;" class="container">
@@ -137,17 +207,12 @@
 
 										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
 											<h3 style="text-align: center;"> <strong> Full Stack Web Developer at Unearth Campaigns</strong></h3>
-											<p>Currently employed as a full stack web engineer for Unearth Campaigns based out of Downtown Sacramento, helping on mostly backend JavaScript and PHP and client side HTML, JavaScript, and CSS.</p>
+											<p>Full stack web engineer for Unearth Campaigns based out of Downtown Sacramento, helping on mostly backend JavaScript and PHP and client side HTML, JavaScript, and CSS.</p>
 											<p style="text-align: right;"> <em>August 2019 - June 2020</em> </p>
 										</div>
 									</div>
 								</div>
 								</section>
-
-
-
-
-
 
 
 								<section class="exp">
@@ -159,7 +224,7 @@
 											<p> <em>UC Davis - June 2018 - December 2018</em> </p>
 										</div>
 										<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
-												<img class="test" style="margin: auto; width: 100%; height: auto;border-radius: 20px;" src="images/pic01.jpg" alt="">
+												<img class="test" style="margin: auto; width: 100%; height: auto;border-radius: 20px;" src="mario.png" alt="">
 										</div>
 									</div>
 								</div>
@@ -177,11 +242,13 @@
 								</div>
 								</section>
 
+
+
 								<section class="exp">
 									<div style="padding-bottom: 60px;" class="container">
 									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
 										<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
-												<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic03.jpg" alt="">
+												<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="code.jpeg" alt="">
 										</div>
 										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
 											<h3 style="text-align: right;"><strong>Bioinformatician, Machine Learning</strong></h3>
@@ -212,7 +279,7 @@
 											<p> <em>June 2018 - December 2018</em> </p>
 										</div>
 										<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
-												<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="images/pic02.jpg" alt="">
+												<img class="test" style="margin: auto; width: 100%; border-radius: 50px;" src="manage.png" alt="">
 										</div>
 									</div>
 								</div>
