added locations to experience section
added locations to experience section on index.html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
 											<h3 style="text-align: right;"> <strong> Clinical Laboratory Technician at Helix</strong></h3>
 											<p>Currently employed as clinical lab technician for Helix biotech performing automated RNA extraction and PCR-based genetic testing.</p>
-											<p style="text-align: right;"> <em>August 2021 - Current</em> </p>
+											<p style="text-align: right;"> <em>San Diego, August 2021 - Current</em> </p>
 										</div>
 									</div>
 								</div>
@@ -144,7 +144,7 @@
 										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
 											<h3 style="text-align: center;"> <strong> Clinical Laboratory Technician at Helix</strong></h3>
 											<p>Currently employed as clinical lab technician for Helix biotech performing automated RNA extraction and PCR-based genetic testing.</p>
-											<p style="text-align: right;"> <em>August 2021 - Current</em> </p>
+											<p style="text-align: right;"> <em>San Diego, August 2021 - Current</em> </p>
 										</div>
 									</div>
 								</div>
@@ -161,7 +161,7 @@
 										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
 											<h3><strong>Analytical Chemistry Laboratory Technician/Microbiology Analyst</strong></h3>
 											<p>  Setup, prepared, troubleshot, and ran Gas Chromatography Mass Spectroscopy, Liquid Chromatography Mass Spectroscopy, HPLC, Atomic Absorption Spectroscopy, and PCR analytical chemistry equipment and methods to analyze heavy metals, mycotoxins, microbes, pesticides, and solvents of agriculture-based consumer products in accordance with state regulations.</p>
-											<p> <em>February 2021 - August 2021</em> </p>
+											<p> <em>San Diego, February 2021 - August 2021</em> </p>
 										</div>
 										<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
 												<img class="test" style="margin: auto; width: 100%; height: auto;border-radius: 20px;" src="coastal.png" alt="">
@@ -176,7 +176,7 @@
 										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 100%;" class="">
 											<h3 style="text-align: center;"><strong>Analytical Chemistry Laboratory Technician/Microbiology Analyst</strong></h3>
 											<p>  Setup, prepared, troubleshot, and ran Gas Chromatography Mass Spectroscopy, Liquid Chromatography Mass Spectroscopy, HPLC, Atomic Absorption Spectroscopy, and PCR analytical chemistry equipment and methods to analyze heavy metals, mycotoxins, microbes, pesticides, and solvents of agriculture-based consumer products in accordance with state regulations.</p>
-											<p> <em>February 2021 - August 2021</em> </p>
+											<p> <em>San Diego, February 2021 - August 2021</em> </p>
 										</div>
 									</div>
 								</div>
@@ -195,7 +195,7 @@
 										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
 											<h3 style="text-align: right;"> <strong> Full Stack Web Developer at Unearth Campaigns</strong></h3>
 											<p>Full stack web engineer for Unearth Campaigns based out of Downtown Sacramento, helping on mostly backend JavaScript and PHP and client side HTML, JavaScript, and CSS.</p>
-											<p style="text-align: right;"> <em>August 2019 - June 2020</em> </p>
+											<p style="text-align: right;"> <em>Sacramento, August 2019 - June 2020</em> </p>
 										</div>
 									</div>
 								</div>
@@ -208,7 +208,7 @@
 										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
 											<h3 style="text-align: center;"> <strong> Full Stack Web Developer at Unearth Campaigns</strong></h3>
 											<p>Full stack web engineer for Unearth Campaigns based out of Downtown Sacramento, helping on mostly backend JavaScript and PHP and client side HTML, JavaScript, and CSS.</p>
-											<p style="text-align: right;"> <em>August 2019 - June 2020</em> </p>
+											<p style="text-align: right;"> <em>Sacramento, August 2019 - June 2020</em> </p>
 										</div>
 									</div>
 								</div>
@@ -221,7 +221,7 @@
 										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
 											<h3><strong>Video Game Developer</strong></h3>
 											<p>  Creating 4 solo projects and one full-scale multi-player final project game with a team of 5, I created video games using Unity game engine software</p>
-											<p> <em>UC Davis - June 2018 - December 2018</em> </p>
+											<p> <em>UC Davis, June 2018 - December 2018</em> </p>
 										</div>
 										<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
 												<img class="test" style="margin: auto; width: 100%; height: auto;border-radius: 20px;" src="mario.png" alt="">
@@ -236,7 +236,7 @@
 										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 100%;" class="">
 											<h3 style="text-align: center;"><strong>Video Game Developer</strong></h3>
 											<p>  Creating 4 solo projects and one full-scale multi-player final project game with a team of 5, I created video games using Unity game engine software</p>
-											<p> <em>UC Davis - June 2018 - December 2018</em> </p>
+											<p> <em>UC Davis, June 2018 - December 2018</em> </p>
 										</div>
 									</div>
 								</div>
