Pfizer Experience to Home Page
Added Pfizer Experience to Home Page and a Pfizer logo

--- a/index.html
+++ b/index.html
@@ -120,8 +120,45 @@
 									</div>
 								</section>
 
+								<!-- Pfizer -->
+								<section class="exp">
+									<div style="padding-bottom: 60px;" class="container">
+									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;" class="">
+											<h3><strong>Protein Purification Scientist at Pfizer</strong></h3>
+											<p>  Support for the BioMedicine Design Biotherapeutics Discovery Group responsible for discovering biotherapeutic drug candidates
+												for Pfizer in La Jolla. Performed protein purification via FPLC and analytics to produce biotherapeutic leads, protein reagents,
+												immunogens, and panning reagents. Prepared of solutions and medias from protocols. Routine lab and equipment maintenance.
+													Support for expression team such as cell harvesting and DNA plasmid preparation.
+													QC analysis on finalized purified protein constructs.
+													</p>
+											<p> <em>San Diego, November 2021 - Present</em> </p>
+										</div>
+										<div style="text-align: center; display: flex; margin-left: 40px; margin-right: 40px; width: 33%;" class="test">
+												<img class="test" style="margin: auto; width: 100%; height: auto;border-radius: 10px;" src="pfizer.jpg" alt="">
+										</div>
+									</div>
+								</div>
+								</section>
 
+								<section class="exp2">
+									<div style="padding-bottom: 60px;" class="container">
+									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
+										<div style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 100%;" class="">
+											<h3 style="text-align: center;"><strong>Protein Purification Scientist at Pfizer</strong></h3>
+											<p>  Support for the BioMedicine Design Biotherapeutics Discovery Group responsible for discovering biotherapeutic drug candidates
+												for Pfizer in La Jolla. Performed protein purification via FPLC and analytics to produce biotherapeutic leads, protein reagents,
+												immunogens, and panning reagents. Prepared of solutions and medias from protocols. Routine lab and equipment maintenance.
+													Support for expression team such as cell harvesting and DNA plasmid preparation.
+													QC analysis on finalized purified protein constructs.</p>
+											<p> <em>SSan Diego, November 2021 - Present</em> </p>
+										</div>
+									</div>
+								</div>
+								</section>
+								<!-- /Pfizer -->
 
+								<!-- Helix -->
 								<section class="exp">
 									<div style="padding-top: 30px; padding-bottom: 60px;" class="container">
 									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
@@ -131,7 +168,7 @@
 										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
 											<h3 style="text-align: right;"> <strong> Clinical Laboratory Technician at Helix</strong></h3>
 											<p>Currently employed as clinical lab technician for Helix biotech performing automated RNA extraction and PCR-based genetic testing.</p>
-											<p style="text-align: right;"> <em>San Diego, August 2021 - Current</em> </p>
+											<p style="text-align: right;"> <em>San Diego, August 2021 - November 2021</em> </p>
 										</div>
 									</div>
 								</div>
@@ -144,17 +181,17 @@
 										<div class="" style="display: flex; flex-direction: column; margin: auto 0; margin-left: 40px; margin-right: 40px; width: 67%;">
 											<h3 style="text-align: center;"> <strong> Clinical Laboratory Technician at Helix</strong></h3>
 											<p>Currently employed as clinical lab technician for Helix biotech performing automated RNA extraction and PCR-based genetic testing.</p>
-											<p style="text-align: right;"> <em>San Diego, August 2021 - Current</em> </p>
+											<p style="text-align: right;"> <em>San Diego, August 2021 - November 2021</em> </p>
 										</div>
 									</div>
 								</div>
 								</section>
+								<!-- /Helix -->
 
 
 
 
-
-
+								<!-- Coastal Analytical -->
 								<section class="exp">
 									<div style="padding-bottom: 60px;" class="container">
 									<div style="width: 100%; display: flex; flex-direction: row; width: 100%; justify-content: space-around;" class="container">
@@ -181,6 +218,7 @@
 									</div>
 								</div>
 								</section>
+								<!-- /Coastal Analytical -->
 
 
 
