Added Line Breaks to subheader
Still does not work on mobile - further troubleshooting may be needed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Julian Reyes</h2>
-				<p>UC Davis - Neurobiology, Physiology and Behavior; Computer Science <br />  Antibody Drug Discovery Protein Engineer, Clinical Lab Tech<br />Analytical Chemist, Software Developer</p>
+				<p>UC Davis - Neurobiology, Physiology and Behavior; Computer Science <br />
+					Antibody Drug Discovery Protein Engineer, Clinical Lab Tech,<br />
+					Analytical Chemist, Software Developer</p>
 				<ul class="actions">
 					<li><a href="projects.html" class="button special big" target="_blank">Projects</a></li>
 				</ul>
