--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Julian Reyes</h2>
-				<p>UC Davis - Neurobiology, Physiology and Behavior; Computer Science <br />
-					Antibody Drug Discovery Protein Engineer, Clinical Lab Tech,<br />
+				<p>UC Davis - Neurobiology, Physiology and Behavior; Computer Science</p>
+					<p>Antibody Drug Discovery Protein Engineer, Clinical Lab Tech,<br />
 					Analytical Chemist, Software Developer</p>
 				<ul class="actions">
 					<li><a href="projects.html" class="button special big" target="_blank">Projects</a></li>
