--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<li><a  class="link" href="projects.html" target="_blank">Projects</a></li>
 						<li><a  class="link link_samepage" href="#bio">Summary</a></li>
 						<!-- <li><a  class="link link_samepage" href="#">Bio</a></li> -->
-						<li><a class="link" href="resume.pdf" target="_blank">Resume</a></li>
+						<li><a class="link" href="resume7.pdf" target="_blank">Resume</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -424,7 +424,7 @@
 										</div>
 										<ul class="actions">
 											<li><a href="https://www.linkedin.com/in/julian-reyes-1b2727190/" class="button special big" target="_blank">LinkedIn</a></li>
-											<li><a href="resume.pdf" class="button big" target="_blank">Resume</a></li>
+											<li><a href="resume7.pdf" class="button big" target="_blank">Resume</a></li>
 										</ul>
 									</div>
 								</section>
