index.html resume7.pdf->resume.pdf
moving reference in index.html from resume7.pdf to resume.pdf bc 'resume7' shows up when you click the resume link, and 'resume' is much cleaner and less weird from ux perspective

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<li><a  class="link" href="projects.html" target="_blank">Projects</a></li>
 						<li><a  class="link link_samepage" href="#bio">Summary</a></li>
 						<!-- <li><a  class="link link_samepage" href="#">Bio</a></li> -->
-						<li><a class="link" href="resume7.pdf" target="_blank">Resume</a></li>
+						<li><a class="link" href="resume.pdf" target="_blank">Resume</a></li>
 					</ul>
 				</nav>
 			</header>
