--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 		<!-- One -->
 			<section  id="one" class="wrapper style1">
 				<div style="text-align: center;" class="">
-					<h1 class="" style="font-size: 2.7em; margin-right: 10px; font-weight: 500;" >Professional/Industry Experience</h1>
+					<h1 class="" style="font-size: 2.7em; margin-right: 10px; font-weight: 500;" >Professional/Industry Web Development Experience</h1>
 				</div>
 				<div style="margin-top: 40px;" class="inner">
 
@@ -63,7 +63,7 @@
 							<p>• Supports market-leading businesses while mitigating risk through professional management, diversification, structured investments and corporate governance.</p>
 							<ul class="actions">
 								<li>
-									<a id="link" href="heartdata/index.html" class="" target="_blank">More</a>
+									<a id="link" href="https://wgdcapital.com/" class="" target="_blank">More</a>
 								</li>
 							</ul>
 						<!-- </a> -->
@@ -90,6 +90,7 @@
 							<h2>California Needs Energy Storage</h2>
 							<p>• Website made for a client while working for Unearth Campaigns</p>
 							<p>• Personally implemented every front end aspect of the site</p>
+							<p>(Link is no longer active due to conclusion of the campaign)</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="https://caneedsenergystorage.com/" class="" target="_blank">More</a>
@@ -106,6 +107,7 @@
 							<h2>Say No to Prop 15 (Higher Property Taxes)</h2>
 							<p>• Website campaign opposing prop 15 and tax increaes in California</p>
 							<p>• Primarily implemented 'Flaws' and 'Read it For Yourself' pages along with various other revisions upon client request</p>
+							<p>(Link is no longer active due to conclusion of the campaign)</p>
 							<ul class="actions">
 								<li>
 									<a id="link" href="https://noonprop15.org/flaw-1-hurts-farmers-and-consumers/" class="" target="_blank">More</a>
@@ -261,7 +263,7 @@
 						</div>
 					</article>
 
-					<article class="feature right">
+					<!-- <article class="feature right">
 						<span class="image"><img style="height: 310px;width: 100%; margin" src="galleryX.png" alt="" /></span>
 						<div class="content">
 							<h2>Gallery</h2>
@@ -272,7 +274,7 @@
 								</li>
 							</ul>
 						</div>
-					</article>
+					</article> -->
 
 					<article class="feature left">
 						<span class="image"><img style="height: 310px;" src="adoption.png" alt="" /></span>
@@ -290,7 +292,7 @@
 					<article class="feature right">
 						<span class="image"><img src="galleryX2.png" alt="" /></span>
 						<div class="content">
-							<h2>Gallery #2</h2>
+							<h2>Photo Gallery</h2>
 							<p>• Another photo gallery based website layout. Made using Bootstrap, HTML, and CSS</p>
 							<ul class="actions">
 								<li>
