--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 										<div class="row 150%">
 											<!-- Westview -->
 											<div class="6u$ 12u$(xsmall)">
-												<div style="display:flex; flex-direction: column; align-items: center; justify-content: center; width: 85%; height: auto;justify-self: center;" class="image fit captioned">
+												<div style="display:flex; flex-direction: column; align-items: center; justify-content: center; width: 85%; margin: 0 auto; text-align: center;" class="image fit captioned">
 													<img class="W8" src="index/assets/img/sd.jpeg" alt="" />
 													<h3 class="W8" >Westview - San Diego, CA</h3>
 												</div>
@@ -463,7 +463,7 @@
 											<!-- /Westview -->
 											<!-- UC Davis -->
 											<div class="6u$ 12u$(xsmall)">
-												<div style="display:flex; flex-direction: column; align-items: center; justify-content: center;width: 85%; height: auto; justify-self: center;" class="image fit captioned">
+												<div style="display:flex; flex-direction: column; align-items: center; justify-content: center;width: 85%; margin: 0 auto; text-align: center;" class="image fit captioned">
 													<img class="W8" src="index/assets/img/uc-davis-4.jpg" alt="" />
 													<h3 class="W8" >UC Davis - Davis, CA</h3>
 												</div>
